--- a/app/src/main/res/layout/transaction_fragment_layout.xml
+++ b/app/src/main/res/layout/transaction_fragment_layout.xml
@@ -9,7 +9,6 @@
         android:id="@+id/transaction_details_rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/toolbar"
-        android:layout_margin="@dimen/margin_5" />
+        android:layout_below="@+id/toolbar" />
 
 </RelativeLayout>
