--- a/app/src/main/res/layout/profile_fragment_layout.xml
+++ b/app/src/main/res/layout/profile_fragment_layout.xml
@@ -49,6 +49,16 @@
         app:layout_anchor="@id/app_bar"
         app:layout_anchorGravity="bottom|center" />
 
+    <ImageView
+        android:id="@+id/edit_profile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|right"
+        android:layout_marginRight="@dimen/margin_20"
+        android:layout_marginTop="?android:actionBarSize"
+        android:background="?selectableItemBackground"
+        android:src="@drawable/ic_edit_black_24dp" />
+
     <android.support.v7.widget.CardView
         android:id="@+id/view_transaction"
         android:layout_width="match_parent"
