--- a/app/src/main/res/layout/activity_stores_details.xml
+++ b/app/src/main/res/layout/activity_stores_details.xml
@@ -112,6 +112,7 @@
                         android:src="@drawable/back_button" />
 
                     <TextView
+                        android:id="@+id/store_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
