--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="@dimen/activity_horizontal_margin">
+    android:layout_margin="@dimen/margin_20">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -43,16 +43,15 @@
                 android:textColorHint="@android:color/black" />
         </android.support.design.widget.TextInputLayout>
 
-        <!-- Login Button -->
-
         <Button
-            android:id="@+id/send_code"
-            android:layout_width="200dp"
+            android:id="@+id/btn_send_code"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/margin_10"
             android:background="@color/colorAccent"
-            android:text="@string/send_code"
+            android:text="@string/text_send_code"
+            android:textAllCaps="false"
             android:textColor="@android:color/white" />
     </LinearLayout>
 
