--- a/app/src/main/res/layout/activity_mobile_verification.xml
+++ b/app/src/main/res/layout/activity_mobile_verification.xml
@@ -1,26 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="@dimen/activity_horizontal_margin">
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_20"
-        android:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+    android:layout_margin="@dimen/margin_20">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/toolbar"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:padding="@dimen/activity_horizontal_margin">
+        android:layout_marginTop="@dimen/margin_30"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="@dimen/logo_w_h"
+            android:layout_height="@dimen/logo_w_h"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="30dp"
+            android:src="@mipmap/united_icon" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="Enter the code sent to"
+            android:textSize="@dimen/text_size_16" />
+
+        <TextView
+            android:id="@+id/phone_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="@dimen/margin_20"
+            android:layout_marginTop="@dimen/margin_5"
+            android:text="01629******"
+            android:textSize="@dimen/text_size_16" />
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/otp_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -28,32 +44,59 @@
                 android:id="@+id/one_time_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Enter OTP"
+                android:layout_marginBottom="10dp"
+                android:hint="@string/hint_phone_no"
                 android:inputType="number"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@android:color/black"
                 android:textColorHint="@android:color/black" />
         </android.support.design.widget.TextInputLayout>
 
-        <Button
-            android:id="@+id/btn_verify"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/otp_layout"
-            android:layout_marginTop="20dip"
-            android:background="@color/colorAccent"
-            android:text="@string/btn_verify"
-            android:textColor="@android:color/white" />
+        <!-- Login Button -->
 
         <Button
-            android:id="@+id/btn_resend"
-            android:layout_width="fill_parent"
+            android:id="@+id/btn_next"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/btn_verify"
-            android:layout_marginTop="20dip"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/margin_10"
             android:background="@color/colorAccent"
-            android:text="@string/btn_resend"
+            android:text="@string/text_next"
+            android:textAllCaps="false"
             android:textColor="@android:color/white" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp">
+
+            <Button
+                android:id="@+id/btn_resend_code"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:text="@string/text_resend"
+                android:textAllCaps="false"
+                android:textColor="@color/colorAccent" />
+
+            <TextView
+                android:id="@+id/timer_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="@dimen/margin_10"
+                android:layout_toRightOf="@+id/btn_resend_code"
+                android:text="00" />
+        </RelativeLayout>
     </LinearLayout>
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center|bottom"
+        android:layout_marginBottom="20dp"
+        android:visibility="gone" />
 </RelativeLayout>
