--- a/app/src/main/res/layout/payment_dialog_layout.xml
+++ b/app/src/main/res/layout/payment_dialog_layout.xml
@@ -1,34 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_view"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
-    card_view:cardCornerRadius="@dimen/margin_2">
+    android:layout_height="wrap_content"
+    android:background="@drawable/dialog_background"
+    android:orientation="vertical">
 
-    <RelativeLayout
+    <TextView
+        android:id="@+id/message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="@dimen/margin_20"
+        android:maxLines="2"
+        android:text="Your payment has been completed"
+        android:textSize="@dimen/text_size_16" />
+
+    <View
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="@dimen/margin_10">
+        android:layout_height="0.5dp"
+        android:layout_below="@+id/message"
+        android:background="@color/colorAccent" />
 
-        <TextView
-            android:id="@+id/message"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/margin_10"
-            android:text="Your payment has been complted"
-            android:textSize="@dimen/text_size_16" />
+    <TextView
+        android:id="@+id/ok_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="@dimen/margin_10"
+        android:text="OK"
+        android:textColor="@color/colorAccent" />
 
-        <Button
-            android:id="@+id/ok_button"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:background="@color/colorAccent"
-            android:text="ok"
-            android:textColor="@color/white" />
-
-    </RelativeLayout>
-</android.support.v7.widget.CardView>
+</LinearLayout>
