--- a/app/src/main/res/layout/activity_mobile_verification.xml
+++ b/app/src/main/res/layout/activity_mobile_verification.xml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="@dimen/margin_20">
+    android:layout_height="match_parent">
+
+    <ImageView
+        android:id="@+id/back_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|left"
+        android:layout_marginLeft="@dimen/margin_20"
+        android:layout_marginTop="@dimen/margin_30"
+        android:background="?selectableItemBackground"
+        android:src="@drawable/ic_chevron_left_black_24dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/toolbar"
+        android:layout_margin="@dimen/margin_20"
         android:layout_marginTop="@dimen/margin_30"
         android:orientation="vertical">
 
@@ -86,7 +95,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="@dimen/margin_10"
                 android:layout_toRightOf="@+id/btn_resend_code"
-                android:text="00" />
+                android:text="0" />
         </RelativeLayout>
     </LinearLayout>
 
