--- a/app/src/main/res/layout/payment_dialog_layout.xml
+++ b/app/src/main/res/layout/payment_dialog_layout.xml
@@ -25,6 +25,7 @@
         android:id="@+id/ok_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/toolbar_background"
         android:gravity="center"
         android:padding="@dimen/margin_10"
         android:text="OK"
