--- a/app/src/main/res/layout/barcode_capture.xml
+++ b/app/src/main/res/layout/barcode_capture.xml
@@ -3,7 +3,7 @@
     android:id="@+id/topLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grey"
+    android:background="@color/transparent_100"
     android:keepScreenOn="true"
     android:orientation="vertical">
 
@@ -23,9 +23,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
+        android:gravity="center"
         android:padding="@dimen/margin_10"
         android:text="Please hold your mobile in the rectangle to capture code"
-        android:textColor="@color/white" />
+        android:textColor="@android:color/black" />
 
 
 </FrameLayout>
